<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data />
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:background="?colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/page1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/welcome"
                android:text="@string/welcome_title"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="56sp"
                android:singleLine="true"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:minHeight="38sp"
                android:shadowDy="1"
                android:shadowRadius="1" />
            <TextView
                android:text="Swipe to continue >"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:singleLine="true"
                android:textStyle="normal"
                android:textAllCaps="true"
                android:shadowColor="@android:color/black"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:minHeight="12sp" />
        </RelativeLayout>
        <ScrollView
            android:id="@+id/page2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/terms_of_use"
                android:text="@string/terms_of_use"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="22dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:singleLine="false"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:scrollbars="vertical"
                android:minHeight="14sp"
                android:shadowDy="1"
                android:shadowRadius="1" />
        </ScrollView>
        <ScrollView
            android:id="@+id/page3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/select_theme"
                    android:text="Select your theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="32dp"
                    android:paddingBottom="32dp"
                    android:textSize="36sp"
                    android:singleLine="true"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/white"
                    android:shadowColor="@android:color/black"
                    android:minHeight="36sp"
                    android:shadowDy="1"
                    android:shadowRadius="1" />
                <RelativeLayout
                    android:id="@+id/color_picker_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.galaxas0.Quartz.ui.LineColorPicker
                        android:id="@+id/color_picker"
                        app:colors="@{@typedArray/material_colors}"
                        android:elevation="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_centerInParent="true"
                        android:layout_margin="16dp" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/select_expanded"
                    android:text="Select your layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:paddingTop="32dp"
                    android:paddingBottom="32dp"
                    android:textSize="36sp"
                    android:singleLine="true"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/white"
                    android:shadowColor="@android:color/black"
                    android:minHeight="36sp"
                    android:shadowDy="1"
                    android:shadowRadius="1" />
                <LinearLayout
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="48dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.galaxas0.Quartz.ui.Boxes
                        android:id="@+id/box_expanded"
                        android:layout_weight="50"
                        android:foreground="?attr/selectableItemBackground"
                        app:rows="@{2}"
                        app:columns="@{3}"
                        app:boxInset="@{4}"
                        app:boxColor="@{@color/material_white}"
                        android:layout_marginRight="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="128dp" />
                    <com.galaxas0.Quartz.ui.Boxes
                        android:id="@+id/box_normal"
                        android:layout_weight="50"
                        android:foreground="?attr/selectableItemBackground"
                        app:rows="@{2}"
                        app:columns="@{2}"
                        app:boxInset="@{4}"
                        app:boxColor="@{@color/material_black}"
                        android:layout_marginLeft="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="128dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <!--<ScrollView
            android:id="@+id/page4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/select_orientation"
                android:text="Select your orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:paddingTop="32dp"
                android:paddingBottom="32dp"
                android:textSize="36sp"
                android:singleLine="true"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:minHeight="36sp"
                android:shadowDy="1"
                android:shadowRadius="1" />
            <TextView
                android:text="[continuous reading + reading orientation]"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:paddingTop="56dp"
                android:paddingBottom="56dp"
                android:textSize="18sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:minHeight="36sp"
                android:shadowDy="1"
                android:shadowRadius="1" />
        </ScrollView>-->
        <RelativeLayout
            android:id="@+id/page5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/setup_complete"
                android:text="@string/setup_complete"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="56sp"
                android:singleLine="true"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:minHeight="38sp"
                android:shadowDy="1"
                android:shadowRadius="1" />
            <TextView
                android:text="Tap to begin using app >"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/setup_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:singleLine="true"
                android:textStyle="normal"
                android:textAllCaps="true"
                android:shadowColor="@android:color/black"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:minHeight="12sp" />
        </RelativeLayout>
    </android.support.v4.view.ViewPager>
</layout>
